# Subtimer

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: python.instructions.md  testing.instructions.md
docs/: project-spec.md
src/subtimer/: __init__.py  alignment_map.py  audio_prep.py  cli.py  hint_guided_matcher.py  hint_loader.py  matcher.py  media_io.py  refiner.py  report.py  retime.py  robust_matcher.py  subtitle_io.py
tests/: conftest.py  test_alignment_map.py  test_retime.py  test_subtitle_io.py
